tests/test_files_pa3/SemanticErrors/LocalVarsNotInitB4Use15.ic
class A
{
	static void main(string[] args) { }

	void a()
	{
		int b;
		int c;
		b = 5;
		
		if (b > 4)
		{
			int b;			
			c = b;
		}
	}
}